--- a/src/Styles/Components/_myPage.scss
+++ b/src/Styles/Components/_myPage.scss
@@ -166,7 +166,7 @@
   display: flex;
   justify-content: center;
   > .barGroup {
-    margin-right: 10px;
+    margin-right: 35px;
     width: 100%;
     > .barImgCover {
       display: flex;
@@ -189,7 +189,7 @@
           align-items: center;
           position: absolute;
           top:-8px;
-          right: -5px;
+          right: -25px;
           width: 29px;
           height: 29px;
           background: #FF6D58;
@@ -243,8 +243,10 @@
     }
   }
   > .modalBtn {
-    width: 70px;
+    width: 60px;
     height: 20px;
+    flex-shrink: 0;
+
     background: #FFB23E;
     border-radius: 15px;
     display: flex;
