--- a/src/Styles/Components/_login.scss
+++ b/src/Styles/Components/_login.scss
@@ -142,6 +142,7 @@
   background-color: rgba(0,0,0,0.5);
   z-index: 100;
   > .box {
+    padding: 21px;
     position: absolute;
     top:50%;
     left:50%;
@@ -151,7 +152,7 @@
     border-radius: 15px;
     background-color: $WHITE;
     > h1 {
-      //position:fixed;
+      //position:fixed;\
       button {
         position: absolute;
         top:2%;
@@ -166,8 +167,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 85%;
-      padding: 10px 20px;
+      height: 90%;
       overflow-y: scroll;
       strong {
         display: flex;
