--- a/src/Styles/Components/_common.scss
+++ b/src/Styles/Components/_common.scss
@@ -96,7 +96,6 @@ $noticeIcon : url('../../Assets/Images/icon/notice.png');
     font-family: Noto_Medium, sans-serif;
     font-size: $font_RR;
     color: $WHITE;
-    line-height: 25px;
   }
 }
 
@@ -657,6 +656,82 @@ $noticeIcon : url('../../Assets/Images/icon/notice.png');
     border-radius: 8.67051px;
   }
 }
+
+// ToggleGreenButton.jsx
+.onToggleGreenButtonCover {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  width: 70px;
+  height: 24px;
+  background: #88D73A;
+  box-shadow: inset 0px -1.14286px 4.57143px rgba(0, 0, 0, 0.25), inset 0px 1.14286px 4.57143px rgba(0, 0, 0, 0.25);
+  border-radius: 22.8571px;
+  div {
+    width: 17.6px;
+    height: 17.6px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 11.4286px;
+    line-height: 18px;
+    color: #4D4D4D;
+    text-align: center;
+  }
+  > .toggleOn {
+    background: #FFFFFF;
+    border-radius: 8.67051px;
+  }
+  > span {
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 15px;
+    text-align: center;
+    color: #294A07;
+    margin-left: 10px;
+  }
+}
+
+.offToggleGreenButtonCover {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 70px;
+  height: 24px;
+  background: #C4C4C4;
+  border-radius: 22.8571px;
+  box-shadow: inset 0px -1.14286px 4.57143px rgba(0, 0, 0, 0.25), inset 0px 1.14286px 4.57143px rgba(0, 0, 0, 0.25);
+  div {
+    width: 17.6px;
+    height: 17.6px;
+    font-family: 'Noto Sans TC', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 11.4286px;
+    line-height: 18px;
+    color: #4D4D4D;
+    text-align: center;
+  }
+  > .toggleOn {
+    background: #FFFFFF;
+    border-radius: 8.67051px;
+  }
+  > span {
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 15px;
+    text-align: center;
+    color: #595959;
+    margin-right: 10px;
+  }
+}
+
+
 
 // PromptModalCover.jsx
 .promptModalCover {
