--- a/src/Styles/Components/_myPage.scss
+++ b/src/Styles/Components/_myPage.scss
@@ -999,3 +999,510 @@
     }
   }
 }
+
+// NaviCouponScreen.jsx
+.couponCover {
+    padding: 10px 21px;
+  > h1 {
+    margin-bottom: 10px;
+  }
+  > .inputCover {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    > input {
+      width: 65%;
+      margin-bottom: 0;
+      margin-right: 10px;
+    }
+    > button {
+      width: 33%;
+      flex-shrink: 1;
+      flex-grow: 0;
+    }
+  }
+  > header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    background-color: $REGULAR_RED;
+    width: 100%;
+    height: 38px;
+    padding: 0 30px;
+    margin-bottom: 16px;
+    > h1, h2 {
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 220%;
+      color: #FFFFFF;
+    }
+  }
+  > p {
+    border: 0.5px solid #C2C2C2;
+    border-radius: 5px;
+    padding: 8px;
+    margin-bottom: 50px;
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 120%;
+    text-align: center;
+    color: #7B7B7B;
+  }
+  > ul {
+    border: 0.5px solid #C2C2C2;
+    border-radius: 5px;
+    margin-bottom: 50px;
+    > li {
+      display: flex;
+      justify-content: space-between;
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 120%;
+      text-align: center;
+      color: #7B7B7B;
+      border-bottom: 1px solid #E6E6E6;
+      padding: 8px;
+      margin: 0 8px;
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+  }
+  > footer {
+    position: relative;
+    margin-bottom: 40px;
+    > h1 {
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 220%;
+      color: #595959;
+      padding: 4px 8px;
+      background-color: $WHITE;
+      position: absolute;
+      top:-20px
+    }
+    > .line {
+      width: 100%;
+      height: 1px;
+      background: #C4C4C4;
+      margin-bottom: 40px;
+    }
+    > ul {
+        padding: 0 0 0 21px;
+      > li {
+        font-family: 'Noto Sans TC';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 150%;
+        color: #7B7B7B;
+        list-style-type: '•';
+        padding: 2px 4px;
+      }
+    }
+  }
+}
+
+// NaviRecipetLottoScreen.jsx
+.receiptLottoCover {
+  padding: 10px 21px;
+  > h1 {
+    margin-bottom: 50px;
+  }
+  > main {
+    border: 1px solid #C2C2C2;
+    border-radius: 10px;
+    position: relative;
+    padding: 40px 10px 0 10px;
+    > header {
+        position: absolute;
+        left: 50%;
+        top:-10%;
+        transform: translateX(-50%);
+        width: fit-content;
+        margin: 0 auto;
+        background-color: $WHITE;
+        padding: 4px;
+      > h1 {
+        font-family: 'Noto Sans TC';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 26px;
+        text-align: center;
+        color: #595959;
+
+
+      }
+    }
+    > ul {
+      > li {
+        display: flex;
+        align-items: center;
+        border-top: 1px solid #E6E6E6;
+        padding: 8px;
+        font-family: 'Noto Sans TC';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 120%;
+        text-align: right;
+        color: #7B7B7B;
+        > span {
+          width: 90px;
+          margin-right: 20px;
+        }
+        > div {
+          > strong {
+            display: flex;
+            border-top: 1px solid #E6E6E6;
+            padding-top: 8px;
+            padding-bottom: 8px;
+            &:first-child {
+              padding-top: 0;
+              border-top: none;
+            }
+            &:last-child {
+              padding-bottom: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// NaviFAQScreen.jsx
+.faqCover {
+  padding:  10px 21px;
+  > h1 {
+    margin-bottom: 30px;
+  }
+  > ul {
+    > li {
+    padding: 6px 0;
+      > div {
+        display: flex;
+        align-items: flex-start;
+        > strong {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius:7.31343px;
+          font-family: Noto_Bold, sans-serif;
+          font-style: normal;
+          font-weight: 900;
+          font-size: 14.6269px;
+          text-align: center;
+          color: #FFFFFF;
+          width: 21.94px;
+          height: 21.94px;
+          padding-bottom: 2px;
+          flex-shrink: 1;
+          margin-top: 6px;
+          margin-right: 8px;
+        }
+        > p {
+          flex-grow: 1;
+          width: 88%;
+
+        }
+      }
+      border-top: 1px dashed #DADADA;
+      > .question {
+        > strong {
+          background-color: $MAIN_RED;
+        }
+        > p {
+          font-family: 'Noto Sans TC';
+          font-style: normal;
+          font-weight: 500;
+          font-size: 15px;
+          line-height: 220%;
+          color: #595959;
+
+        }
+      }
+      > .answer {
+        > strong {
+          background-color: $DARK_BLUE;
+        }
+        > p {
+          font-family: 'Noto Sans TC';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 15px;
+          line-height: 150%;
+          color: #7B7B7B;
+        }
+      }
+    }
+  }
+}
+
+// NaviDirectInquiryScreen.jsx
+.qnaCover {
+  padding: 10px 21px;
+  > h1 {
+    margin-bottom: 20px;
+  }
+  > .desc {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    height: 32px;
+    background-color: $LIGHT_GREY_2;
+    margin-bottom: 10px;
+    > h1 {
+      font-size: 15px;
+      color: $LIGHT_GREY;
+    }
+  }
+  > p {
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 150%;
+    text-align: center;
+    color: #7B7B7B;
+    margin-bottom: 30px;
+
+  }
+  > .qnaHeader {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $REGULAR_RED;
+    border-radius: 5px;
+    height: 38px;
+    margin-bottom: 15px;
+    > li {
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 220%;
+      color: #FFFFFF;
+    }
+  }
+  > .qnaBody {
+    border: 1px solid #C2C2C2;
+    border-radius: 5px;
+    padding: 2px 10px;
+    margin-bottom: 10px;
+    margin-bottom: 10px;
+
+    > li {
+      display: flex;
+      flex-grow: 1;
+      flex-shrink: 0;
+      border-bottom: 1px solid #E6E6E6;
+      padding: 7px 0;
+      > span {
+        flex-grow: 1;
+        flex-shrink: 0;
+      }
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+     .title, .date {
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 120%;
+      color: #7B7B7B;
+    }
+    .response_y {
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 120%;
+      text-align: center;
+      color: #FF6565;
+      width: 20%;
+      text-align: center;
+    }
+    .response_n {
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 120%;
+      text-align: center;
+      color: #77ADFF;
+      width: 20%;
+      text-align: center;
+    }
+
+  }
+  > .qnaHeader,
+  .qnaBody  {
+     .title {
+      width: 60%;
+      padding-left: 20px;
+    }
+     .date {
+      width: 20%;
+      text-align: center;
+    }
+     .response {
+      width: 20%;
+      text-align: center;
+    }
+  }
+  > .nodata {
+    border: 1px solid #C2C2C2;
+    border-radius: 5px;
+    padding: 8px 10px;
+    margin-bottom: 10px;
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 120%;
+    text-align: center;
+    color: #7B7B7B;
+  }
+  > footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+    padding-bottom: 40px;
+    border-bottom: 1px dashed $LIGHT_GREY_2;
+    .paginationCover {
+      margin: 0;
+    }
+  }
+  > .emailQna {
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid $LIGHT_GREY_6;
+    border-radius: 10px;
+    padding: 20px;
+    position: relative;
+    > strong {
+      position: absolute;
+      left: 50%;
+      top:-20%;
+      transform: translateX(-50%);
+      padding: 5px 8px;
+      background-color: $WHITE;
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 23px;
+      text-align: center;
+      color: #595959;
+    }
+    > span {
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 150%;
+      color: #7B7B7B;
+      margin-left: 15px;
+    }
+  }
+}
+
+// DirectInquiryWriteScreen.jsx
+.qnaWriteCover {
+  padding: 10px 21px;
+  > h1 {
+    margin-bottom: 30px;
+  }
+  > .inputCover {
+    margin-bottom: 20px;
+  }
+  > .btnCover {
+     button:first-child {
+      margin-right: 10px;
+    }
+  }
+}
+
+// DirectInquiryDetailScreen.jsx
+.qnaDetailCover {
+  padding: 10px 21px;
+  > h1 {
+    margin-bottom: 20px;
+  }
+  > .question,
+  > .answer{
+    > .title {
+      border-radius: 5px;
+      color: $WHITE;
+      padding: 12px 18px;
+      margin-bottom: 10px;
+      > p {
+        font-family: 'Noto Sans TC';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 15px;
+        color: #FFFFFF;
+        margin-bottom: 4px;
+      }
+      > span {
+        font-family: 'Noto Sans TC';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+      }
+    }
+    > .desc {
+      font-family: 'Noto Sans TC';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 150%;
+      color: #656565;
+      border-radius: 5px;
+      border: 1px solid $LIGHT_GREY_6;
+      padding: 12px 16px;
+      margin-bottom: 30px;
+      > img {
+        width: 100%;
+      }
+    }
+  }
+  .question {
+    > .title {
+      background-color: $REGULAR_RED;
+      > span {
+        color: #580000;
+      }
+    }
+  }
+  .answer {
+    > .title {
+      background-color: $DARK_BLUE;
+      > span {
+        color : $LIGHT_BLUE;
+      }
+    }
+  }
+  > .btnCover {
+    display: flex;
+
+  }
+}
