--- a/src/Styles/Components/_myPage.scss
+++ b/src/Styles/Components/_myPage.scss
@@ -920,11 +920,15 @@
       > .vipRenderCover {
         width: 100%;
         font-size: 13px;
-        color: $MAIN_RED;
+        color: $LIGHT_GREY;
         padding: 6px 0;
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         border-bottom: 1px solid $LIGHT_GREY_2;
+        > .grade, > .date {
+          width: 50%;
+          text-align: center;
+        }
         &:last-child {
           border-bottom: none;
         }
