--- a/src/Styles/main.scss
+++ b/src/Styles/main.scss
@@ -9,6 +9,7 @@
 @import "./Components/myCombine";
 @import "./Components/myPage";
 @import "./Components/login";
+@import "./Components/feed";
 
 
 
