--- a/src/Styles/Components/_common.scss
+++ b/src/Styles/Components/_common.scss
@@ -33,7 +33,8 @@ $noticeIcon : url('../../Assets/Images/icon/notice.png');
     margin: 0;
     > img {
       width: 16px;
-      height: 16px;
+      height: 18px;
+      transform: translateY(-2px);
     }
   }
   > .numCover {
