--- a/src/Styles/Components/_feed.scss
+++ b/src/Styles/Components/_feed.scss
@@ -327,7 +327,6 @@
       color: $WHITE;
       padding: 12px 18px;
       margin-bottom: 10px;
-
       > p {
         font-family: 'Noto Sans TC';
         font-style: normal;
@@ -335,15 +334,34 @@
         font-size: 15px;
         color: #FFFFFF;
         margin-bottom: 4px;
+        line-height: 1.5;
+      }
+      > div {
+        display: flex;
+        justify-content: space-between;
+        > .userIdWithIcon {
+          > .icon {
+            width: 19px;
+            height: 19px;
+          }
+          > .userId {
+            color: #7B0000;
+            font-family: 'Noto Sans TC';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 13px;
+          }
+        }
+        > span {
+          color: #7B0000;
+          font-family: 'Noto Sans TC';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 13px;
+        }
       }
 
-      > span {
-        color: #580000;
-        font-family: 'Noto Sans TC';
-        font-style: normal;
-        font-weight: 400;
-        font-size: 13px;
-      }
+
     }
     > .desc {
       font-family: 'Noto Sans TC';
@@ -355,23 +373,328 @@
       border-radius: 5px;
       border: 1px solid $LIGHT_GREY_6;
       padding: 12px 16px;
-      margin-bottom: 30px;
+      margin-bottom: 10px;
 
       > img {
         width: 100%;
       }
     }
   }
-  .answer {
-    > .title {
-      background-color: $DARK_BLUE;
-      > span {
-        color : $LIGHT_BLUE;
+  > footer {
+    > .btnCover {
+      display: flex;
+      margin-bottom: 20px;
+    }
+  }
+  > .commentCover {
+    > .writeCover {
+      margin-bottom: 40px;
+      text-align: right;
+    }
+  }
+}
+
+// FeedCommentsList.jsx
+ .commentsListCover {
+  > h1 {
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    color: #FFFFFF;
+    border-radius: 5px;
+    padding: 10px 20px;
+    margin-bottom: 10px;
+  }
+  > .list {
+    border: 1px solid #C2C2C2;
+    border-radius: 5px;
+    padding: 5px 15px;
+   > ul {
+     > .noData {
+       font-family: 'Noto Sans TC';
+       font-style: normal;
+       font-weight: 400;
+       font-size: 15px;
+       text-align: center;
+       color: #656565;
+
+     }
+     > li {
+       display: flex;
+       flex-direction: column;
+       border-bottom: 1px solid #E6E6E6;
+       padding: 10px 0;
+       > .title {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         margin-bottom: 10px;
+         > button {
+           background-image: url("../../Assets/Images/icon/menuDotIcon.png");
+           width: 4px;
+           height: 16px;
+           background-repeat: no-repeat;
+           background-size: contain;
+           background-position: center center;
+         }
+       }
+       > p.contents {
+         display: flex;
+         align-items: center;
+         font-family: 'Noto Sans TC';
+         font-style: normal;
+         font-weight: 400;
+         line-height: 1.5;
+         font-size: 13px;
+         color: #656565;
+         margin-bottom: 4px;
+       }
+       > span.date {
+         display: flex;
+         justify-content: flex-end;
+         align-items: center;
+         font-family: 'Noto Sans TC';
+         font-style: normal;
+         font-weight: 400;
+         font-size: 13px;
+         color: #C4C4C4;
+       }
+     }
+   }
+    > .paginationCover {
+      margin-bottom: 10px;
+    }
+  }
+}
+
+// LottoButton.jsx
+.lottoButtonCover {
+  position: relative;
+  margin: 21px 21px 0 21px;
+  border: 1px solid $LIGHT_GREY_6;
+  border-radius: 10px;
+  padding: 30px 10px 10px 10px;
+  > h1 {
+    position: absolute;
+    top:-15px;
+    left: 20px;
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 26px;
+    text-align: center;
+    color: #595959;
+    background-color: $WHITE;
+    padding: 5px;
+  }
+  > div {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    > button {
+      width: 30%;
+      border-radius: 10px;
+      padding: 5px 10px;
+      transition: all 300ms;
+    }
+    > button.daily {
+      border: 1px solid $ORANGE;
+      color: $ORANGE;
+      &:hover{
+        background-color:$ORANGE;
+        color: $WHITE;
+      }
+    }
+    > button.big {
+      border: 1px solid $DARK_BLUE;
+      color: $DARK_BLUE;
+      &:hover{
+        background-color:$DARK_BLUE;
+        color: $WHITE;
+      }
+    }
+    > button.super {
+      border: 1px solid $MAIN_RED;
+      color: $MAIN_RED;
+      &:hover{
+        background-color:$MAIN_RED;
+        color: $WHITE;
       }
     }
   }
-  > .btnCover {
-    display: flex;
+}
 
+// FeedLottoList.jsx
+.feedLottoListCover{
+  > .feedLottoTitleCover{
+      padding: 10px 21px;
+    > h1 {
+      margin-bottom: 20px;
+    }
+    > .titleCover {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-radius: 5px;
+      padding: 15px;
+      height: 70px;
+      margin-bottom: 10px;
+      > img {
+        width: 30%;
+      }
+      > span {
+        color: $WHITE;
+      }
+    }
+    > .paginationCover {
+      margin-bottom: 0;
+    }
+  }
+
+}
+
+// FeedCardLottoDetailScreen.jsx
+.feedCardLottoDetailCover {
+  padding: 10px 21px;
+  > h1 {
+    margin-bottom: 20px;
+  }
+  > .contents {
+    > .title {
+      border-radius: 5px;
+      background-color: $REGULAR_RED;
+      color: $WHITE;
+      padding: 12px 18px;
+      margin-bottom: 10px;
+      > p {
+        font-family: 'Noto Sans TC';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 15px;
+        color: #FFFFFF;
+        margin-bottom: 4px;
+        line-height: 1.5;
+      }
+      > div {
+        display: flex;
+        justify-content: space-between;
+        > span {
+          color: $WHITE;
+          font-family: 'Noto Sans TC';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 13px;
+        }
+      }
+
+
+    }
+    > .desc {
+      color: #656565;
+      border-radius: 5px;
+      border: 1px solid $LIGHT_GREY_6;
+      padding: 21px 18px;
+      margin-bottom: 10px;
+
+      > .lottoNum {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 30px;
+        > li {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 13px;
+          width: 30px;
+          height: 30px;
+          margin: 0 1px;
+          border-radius: 50%;
+        }
+        > li.num {
+          background-color: $LIGHT_RED;
+          color: $WHITE;
+        }
+        > li.bonusNum {
+          position: relative;
+          background-color: #FFDA7C;
+          color: $LIGHT_RED;
+          flex-grow: 0;
+          flex-shrink: 1;
+          margin-left: 12px;
+          margin-right: 2px;
+          &:before {
+            content: '';
+            position: absolute;
+            display: block;
+            background-image: url('../../Assets/Images/icon/plus-icon.png');
+            background-size: 10px 10px;
+            background-repeat: no-repeat;
+            background-position: center center;
+            width: 10px;
+            height: 10px;
+            right: 105%;
+          }
+        }
+      }
+      > .rank {
+        width: 100%;
+        > li {
+          display: flex;
+          align-items: center;
+          border-top: 1px solid #DADADA;
+          padding: 8px 2px;
+          &:last-child {
+            border-bottom: 1px solid #DADADA;
+          }
+          > strong {
+            display: inline-block;
+            font-family: Noto_Light, 'sans-serif';
+            font-style: normal;
+            font-size: 12px;
+            color: #656565;
+          }
+          .rankText {
+            width: 15%;
+          }
+          .winningNumCount {
+            width: 35%;
+          }
+          .winnerCount {
+            width: 20%;
+          }
+          .winMoney {
+            width: 30%;
+            text-align: right;
+          }
+        }
+        > .rankHeader {
+          > strong {
+            font-weight: 700;
+            font-family: Noto_Bold, 'sans-serif';
+          }
+        }
+        > .pointLow {
+          > strong {
+            color: $MAIN_RED;
+          }
+        }
+      }
+
+    }
+  }
+  > footer {
+    > .btnCover {
+      display: flex;
+      margin-bottom: 20px;
+    }
+  }
+  > .commentCover {
+    > .writeCover {
+      margin-bottom: 40px;
+      text-align: right;
+    }
   }
 }
