add page feed lotto

--- a/src/Styles/Components/_feed.scss
+++ b/src/Styles/Components/_feed.scss
@@ -74,7 +74,7 @@
     max-height: 140px;
     text-align: left;
     > .count {
-      display: none;
+      //display: none;
     }
   }
   > footer {
@@ -526,7 +526,7 @@
   }
 }
 
-// FeedLottoList.jsx
+// FeedLottoListScreen.jsx
 .feedLottoListCover{
   > .feedLottoTitleCover{
       padding: 10px 21px;
